Add display graph function for DFS

--- a/Trees and graphs/Course2ProblemSet2_Solutions.ipynb
+++ b/Trees and graphs/Course2ProblemSet2_Solutions.ipynb
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -438,16 +438,15 @@
     "    print(\"Complete\")\n",
     "\n",
     "def display_Graph(g):\n",
-    "    print(g.adj_list)\n",
-    "    #for node in range(0, len(g.adj_list) - 1):\n",
-    "        #print(node, \"--> \", end = \" \")\n",
-    "        #for edge in range(len(g.adj_list[node])):\n",
-    "            #print(g.adj_list[node][edge], end = \" \")"
+    "    #print(g.adj_list)\n",
+    "    for node in range(0, len(g.adj_list) - 1):\n",
+    "        print(node, \"--> \", end = \" \")\n",
+    "        print(g.adj_list[node])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 43,
    "id": "924ef492",
    "metadata": {},
    "outputs": [
@@ -457,7 +456,14 @@
      "text": [
       "Original graph\n",
       "\n",
-      "[{1, 2, 4}, {0}, {0, 3, 4}, {2, 4}, {0, 2, 3}]\n",
+      "0 -->  {1, 2, 4}\n",
+      "1 -->  {0}\n",
+      "2 -->  {0, 3, 4}\n",
+      "3 -->  {2, 4}\n",
+      "\n",
+      "Back edges are\n",
+      "(4, 0)\n",
+      "(4, 2)\n",
       "\n",
       "Node\t Discovery\t Finish\t DFS-Tree-Parent\n",
       "0 \t 0\t\t 9 \t None\n",
@@ -468,7 +474,14 @@
       "\n",
       "Transposed Graph\n",
       "\n",
-      "[{1, 2, 4}, {0}, {0, 3, 4}, {2, 4}, {0, 2, 3}]\n",
+      "0 -->  {1, 2, 4}\n",
+      "1 -->  {0}\n",
+      "2 -->  {0, 3, 4}\n",
+      "3 -->  {2, 4}\n",
+      "\n",
+      "Back edges are\n",
+      "(4, 0)\n",
+      "(4, 2)\n",
       "\n",
       "Node\t Discovery\t Finish\t DFS-Tree-Parent\n",
       "0 \t 0\t\t 9 \t None\n",
@@ -498,6 +511,9 @@
     "    g.dfs_visit(0, DFSTimeCounter(), discovery_times, finish_times, dfs_tree_parents, dfs_back_edges )\n",
     "\n",
     "    display_Graph(g)\n",
+    "    print('\\nBack edges are')\n",
+    "    for (i,j) in non_trivial_back_edges:\n",
+    "        print(f'{(i,j)}')\n",
     "\n",
     "    print('\\nNode\\t Discovery\\t Finish\\t DFS-Tree-Parent')\n",
     "    for i in range(5):\n",
@@ -505,9 +521,9 @@
     "\n",
     "print('Original graph\\n')\n",
     "test_dfs(g)\n",
-    "g_transpose = transpose_Graph(g)\n",
-    "print('\\nTransposed Graph\\n')\n",
-    "test_dfs(g_transpose)\n"
+    "#g_transpose = transpose_Graph(g)\n",
+    "#print('\\nTransposed Graph\\n')\n",
+    "#test_dfs(g_transpose)\n"
    ]
   },
   {
