Layout flow of num_connected_components

--- a/Trees and graphs/Course2ProblemSet2_Solutions.ipynb
+++ b/Trees and graphs/Course2ProblemSet2_Solutions.ipynb
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 58,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -418,8 +418,30 @@
    "source": [
     "def num_connected_components(g): # g is an UndirectedGraph class\n",
     "    # your code here\n",
-    "    print(\"In Progress\")\n",
+    "    # Traverse the original graph\n",
+    "    g.dfs_traverse_graph()\n",
+    "    # create a queue based on descending order of the finish times of original graph\n",
+    "    ordered_queue = create_queue(finish_times)\n",
+    "    print(test_dfs(g))\n",
+    "    # Transpose the original graph\n",
+    "    g_transposed = transpose_Graph(g)\n",
+    "    # dfs the transposed graph and set variable to count the maximally strongly connected graph\n",
+    "    mscc = dfs_transposed_graph(g_transposed, ordered_queue)\n",
+    "\n",
+    "    return len(mscc)\n",
+    "\n",
     "# create list of elements in descending order of finish times\n",
+    "def create_queue():\n",
+    "    queue = []\n",
+    "    for i in range (0, len(finish_times)):\n",
+    "        max = 0\n",
+    "        location = 0\n",
+    "        for j in range(len(finish_times)):\n",
+    "            if finish_times[j] > max and j not in queue:\n",
+    "                max = finish_times[j]\n",
+    "                location = j\n",
+    "        queue.append(location)\n",
+    "    return queue\n",
     "\n",
     "# transpose the graph\n",
     "def transpose_Graph(g):\n",
@@ -432,21 +454,55 @@
     "    return transposed_graph\n",
     "\n",
     "# create dfs for transposed graph.\n",
-    "def dfs_transposed_graph():\n",
+    "def dfs_transposed_graph(g_transpose, ordered_queue):\n",
+    "    # Initialise the values for transposed graph\n",
+    "    discovery_times = [None]*g.n\n",
+    "    finish_times = [None]*g.n\n",
+    "    dfs_tree_parents = [None]*g.n\n",
+    "    dfs_back_edges = []\n",
+    "    g.dfs_visit(0, DFSTimeCounter(), discovery_times, finish_times, dfs_tree_parents, dfs_back_edges)\n",
+    "\n",
+    "    # walk through the nodes in the ordered queue. \n",
+    "    # If the node has not been seen run dfs_visit, then add the node to the seen nodes list\n",
     "\n",
     "\n",
-    "    print(\"Complete\")\n",
+    "    return # number of MSCCs\n",
     "\n",
     "def display_Graph(g):\n",
-    "    #print(g.adj_list)\n",
-    "    for node in range(0, len(g.adj_list) - 1):\n",
+    "    '''\n",
+    "    # Print a chart showing all edges in the graph\n",
+    "    '''\n",
+    "    for node in range(0, len(g.adj_list)):\n",
     "        print(node, \"--> \", end = \" \")\n",
-    "        print(g.adj_list[node])"
+    "        print(g.adj_list[node])\n",
+    "\n",
+    "\n",
+    "def test_dfs(g: UndirectedGraph) -> UndirectedGraph:\n",
+    "    '''\n",
+    "    # Creates all variables required, then displays the discovery time, finish time, dfs parent, and dfs back edge charts for the supplied graph.\n",
+    "    '''\n",
+    "    discovery_times = [None]*g.n\n",
+    "    finish_times = [None]*g.n\n",
+    "    dfs_tree_parents = [None]*g.n\n",
+    "    dfs_back_edges = []\n",
+    "    g.dfs_visit(0, DFSTimeCounter(), discovery_times, finish_times, dfs_tree_parents, dfs_back_edges)\n",
+    "\n",
+    "    display_Graph(g)\n",
+    "    print('\\nBack edges are')\n",
+    "    for (i,j) in non_trivial_back_edges:\n",
+    "        print(f'{(i,j)}')\n",
+    "\n",
+    "    print('\\nNode\\t Discovery\\t Finish\\t DFS-Tree-Parent')\n",
+    "    for i in range(5):\n",
+    "        print(f'{i} \\t {discovery_times[i]}\\t\\t {finish_times[i]} \\t {dfs_tree_parents[i]}')\n",
+    "\n",
+    "    print('\\nFinish time queue')\n",
+    "    print(create_queue())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 60,
    "id": "924ef492",
    "metadata": {},
    "outputs": [
@@ -455,40 +511,20 @@
      "output_type": "stream",
      "text": [
       "Original graph\n",
-      "\n",
-      "0 -->  {1, 2, 4}\n",
-      "1 -->  {0}\n",
-      "2 -->  {0, 3, 4}\n",
-      "3 -->  {2, 4}\n",
-      "\n",
-      "Back edges are\n",
-      "(4, 0)\n",
-      "(4, 2)\n",
-      "\n",
-      "Node\t Discovery\t Finish\t DFS-Tree-Parent\n",
-      "0 \t 0\t\t 9 \t None\n",
-      "1 \t 1\t\t 2 \t 0\n",
-      "2 \t 3\t\t 8 \t 0\n",
-      "3 \t 4\t\t 7 \t 2\n",
-      "4 \t 5\t\t 6 \t 3\n",
-      "\n",
-      "Transposed Graph\n",
-      "\n",
-      "0 -->  {1, 2, 4}\n",
-      "1 -->  {0}\n",
-      "2 -->  {0, 3, 4}\n",
-      "3 -->  {2, 4}\n",
-      "\n",
-      "Back edges are\n",
-      "(4, 0)\n",
-      "(4, 2)\n",
-      "\n",
-      "Node\t Discovery\t Finish\t DFS-Tree-Parent\n",
-      "0 \t 0\t\t 9 \t None\n",
-      "1 \t 1\t\t 2 \t 0\n",
-      "2 \t 3\t\t 8 \t 0\n",
-      "3 \t 4\t\t 7 \t 2\n",
-      "4 \t 5\t\t 6 \t 3\n"
+      "\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32me:\\Python\\CU-MSDS\\Trees and graphs\\Course2ProblemSet2_Solutions.ipynb Cell 9\u001b[0m in \u001b[0;36m<cell line: 10>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/Python/CU-MSDS/Trees%20and%20graphs/Course2ProblemSet2_Solutions.ipynb#X20sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m g\u001b[39m.\u001b[39madd_edge(\u001b[39m3\u001b[39m,\u001b[39m4\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/Python/CU-MSDS/Trees%20and%20graphs/Course2ProblemSet2_Solutions.ipynb#X20sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mOriginal graph\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m'\u001b[39m)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/Python/CU-MSDS/Trees%20and%20graphs/Course2ProblemSet2_Solutions.ipynb#X20sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m test_dfs(g)\n",
+      "\u001b[1;32me:\\Python\\CU-MSDS\\Trees and graphs\\Course2ProblemSet2_Solutions.ipynb Cell 9\u001b[0m in \u001b[0;36mtest_dfs\u001b[1;34m(g)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/Python/CU-MSDS/Trees%20and%20graphs/Course2ProblemSet2_Solutions.ipynb#X20sZmlsZQ%3D%3D?line=61'>62</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mtest_dfs\u001b[39m(g):\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/Python/CU-MSDS/Trees%20and%20graphs/Course2ProblemSet2_Solutions.ipynb#X20sZmlsZQ%3D%3D?line=62'>63</a>\u001b[0m \u001b[39m# Test and print DFS visit charts\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/Python/CU-MSDS/Trees%20and%20graphs/Course2ProblemSet2_Solutions.ipynb#X20sZmlsZQ%3D%3D?line=63'>64</a>\u001b[0m     \u001b[39m#discovery_times = [None]*g.n\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/Python/CU-MSDS/Trees%20and%20graphs/Course2ProblemSet2_Solutions.ipynb#X20sZmlsZQ%3D%3D?line=64'>65</a>\u001b[0m     \u001b[39m#finish_times = [None]*g.n\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/Python/CU-MSDS/Trees%20and%20graphs/Course2ProblemSet2_Solutions.ipynb#X20sZmlsZQ%3D%3D?line=65'>66</a>\u001b[0m     \u001b[39m#dfs_tree_parents = [None]*g.n\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/Python/CU-MSDS/Trees%20and%20graphs/Course2ProblemSet2_Solutions.ipynb#X20sZmlsZQ%3D%3D?line=66'>67</a>\u001b[0m     \u001b[39m#dfs_back_edges = []\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/Python/CU-MSDS/Trees%20and%20graphs/Course2ProblemSet2_Solutions.ipynb#X20sZmlsZQ%3D%3D?line=67'>68</a>\u001b[0m     g\u001b[39m.\u001b[39;49mdfs_visit(\u001b[39m0\u001b[39;49m, DFSTimeCounter(), discovery_times, finish_times, dfs_tree_parents, dfs_back_edges)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/Python/CU-MSDS/Trees%20and%20graphs/Course2ProblemSet2_Solutions.ipynb#X20sZmlsZQ%3D%3D?line=69'>70</a>\u001b[0m     display_Graph(g)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/Python/CU-MSDS/Trees%20and%20graphs/Course2ProblemSet2_Solutions.ipynb#X20sZmlsZQ%3D%3D?line=70'>71</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39mBack edges are\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;32me:\\Python\\CU-MSDS\\Trees and graphs\\Course2ProblemSet2_Solutions.ipynb Cell 9\u001b[0m in \u001b[0;36mUndirectedGraph.dfs_visit\u001b[1;34m(self, i, dfs_timer, discovery_times, finish_times, dfs_tree_parent, dfs_back_edges)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/Python/CU-MSDS/Trees%20and%20graphs/Course2ProblemSet2_Solutions.ipynb#X20sZmlsZQ%3D%3D?line=65'>66</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdfs_visit\u001b[39m(\u001b[39mself\u001b[39m, i, dfs_timer, discovery_times, finish_times, \n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/Python/CU-MSDS/Trees%20and%20graphs/Course2ProblemSet2_Solutions.ipynb#X20sZmlsZQ%3D%3D?line=66'>67</a>\u001b[0m                     dfs_tree_parent, dfs_back_edges):\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/Python/CU-MSDS/Trees%20and%20graphs/Course2ProblemSet2_Solutions.ipynb#X20sZmlsZQ%3D%3D?line=67'>68</a>\u001b[0m     \u001b[39massert\u001b[39;00m \u001b[39m0\u001b[39m \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m i \u001b[39m<\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/Python/CU-MSDS/Trees%20and%20graphs/Course2ProblemSet2_Solutions.ipynb#X20sZmlsZQ%3D%3D?line=68'>69</a>\u001b[0m     \u001b[39massert\u001b[39;00m discovery_times[i] \u001b[39m==\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/Python/CU-MSDS/Trees%20and%20graphs/Course2ProblemSet2_Solutions.ipynb#X20sZmlsZQ%3D%3D?line=69'>70</a>\u001b[0m     \u001b[39massert\u001b[39;00m finish_times[i] \u001b[39m==\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/Python/CU-MSDS/Trees%20and%20graphs/Course2ProblemSet2_Solutions.ipynb#X20sZmlsZQ%3D%3D?line=70'>71</a>\u001b[0m     discovery_times[i] \u001b[39m=\u001b[39m dfs_timer\u001b[39m.\u001b[39mget()\n",
+      "\u001b[1;31mAssertionError\u001b[0m: "
      ]
     }
    ],
@@ -500,24 +536,6 @@
     "g.add_edge(2,3)\n",
     "g.add_edge(2,4)\n",
     "g.add_edge(3,4)\n",
-    "\n",
-    "\n",
-    "def test_dfs(g):\n",
-    "# Test DFS visit\n",
-    "    discovery_times = [None]*5\n",
-    "    finish_times = [None]*5\n",
-    "    dfs_tree_parents = [None]*5\n",
-    "    dfs_back_edges = []\n",
-    "    g.dfs_visit(0, DFSTimeCounter(), discovery_times, finish_times, dfs_tree_parents, dfs_back_edges )\n",
-    "\n",
-    "    display_Graph(g)\n",
-    "    print('\\nBack edges are')\n",
-    "    for (i,j) in non_trivial_back_edges:\n",
-    "        print(f'{(i,j)}')\n",
-    "\n",
-    "    print('\\nNode\\t Discovery\\t Finish\\t DFS-Tree-Parent')\n",
-    "    for i in range(5):\n",
-    "        print(f'{i} \\t {discovery_times[i]}\\t\\t {finish_times[i]} \\t {dfs_tree_parents[i]}')\n",
     "\n",
     "print('Original graph\\n')\n",
     "test_dfs(g)\n",
