--- a/Trees and graphs/Course2ProblemSet2_Solutions.ipynb
+++ b/Trees and graphs/Course2ProblemSet2_Solutions.ipynb
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 61,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -422,7 +422,7 @@
     "    g.dfs_traverse_graph()\n",
     "    # create a queue based on descending order of the finish times of original graph\n",
     "    ordered_queue = create_queue(finish_times)\n",
-    "    print(test_dfs(g))\n",
+    "    #print(test_dfs(g))\n",
     "    # Transpose the original graph\n",
     "    g_transposed = transpose_Graph(g)\n",
     "    # dfs the transposed graph and set variable to count the maximally strongly connected graph\n",
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 62,
    "id": "924ef492",
    "metadata": {},
    "outputs": [
@@ -511,20 +511,26 @@
      "output_type": "stream",
      "text": [
       "Original graph\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32me:\\Python\\CU-MSDS\\Trees and graphs\\Course2ProblemSet2_Solutions.ipynb Cell 9\u001b[0m in \u001b[0;36m<cell line: 10>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/Python/CU-MSDS/Trees%20and%20graphs/Course2ProblemSet2_Solutions.ipynb#X20sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m g\u001b[39m.\u001b[39madd_edge(\u001b[39m3\u001b[39m,\u001b[39m4\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/Python/CU-MSDS/Trees%20and%20graphs/Course2ProblemSet2_Solutions.ipynb#X20sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mOriginal graph\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m'\u001b[39m)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/Python/CU-MSDS/Trees%20and%20graphs/Course2ProblemSet2_Solutions.ipynb#X20sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m test_dfs(g)\n",
-      "\u001b[1;32me:\\Python\\CU-MSDS\\Trees and graphs\\Course2ProblemSet2_Solutions.ipynb Cell 9\u001b[0m in \u001b[0;36mtest_dfs\u001b[1;34m(g)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/Python/CU-MSDS/Trees%20and%20graphs/Course2ProblemSet2_Solutions.ipynb#X20sZmlsZQ%3D%3D?line=61'>62</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mtest_dfs\u001b[39m(g):\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/Python/CU-MSDS/Trees%20and%20graphs/Course2ProblemSet2_Solutions.ipynb#X20sZmlsZQ%3D%3D?line=62'>63</a>\u001b[0m \u001b[39m# Test and print DFS visit charts\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/Python/CU-MSDS/Trees%20and%20graphs/Course2ProblemSet2_Solutions.ipynb#X20sZmlsZQ%3D%3D?line=63'>64</a>\u001b[0m     \u001b[39m#discovery_times = [None]*g.n\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/Python/CU-MSDS/Trees%20and%20graphs/Course2ProblemSet2_Solutions.ipynb#X20sZmlsZQ%3D%3D?line=64'>65</a>\u001b[0m     \u001b[39m#finish_times = [None]*g.n\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/Python/CU-MSDS/Trees%20and%20graphs/Course2ProblemSet2_Solutions.ipynb#X20sZmlsZQ%3D%3D?line=65'>66</a>\u001b[0m     \u001b[39m#dfs_tree_parents = [None]*g.n\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/Python/CU-MSDS/Trees%20and%20graphs/Course2ProblemSet2_Solutions.ipynb#X20sZmlsZQ%3D%3D?line=66'>67</a>\u001b[0m     \u001b[39m#dfs_back_edges = []\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/Python/CU-MSDS/Trees%20and%20graphs/Course2ProblemSet2_Solutions.ipynb#X20sZmlsZQ%3D%3D?line=67'>68</a>\u001b[0m     g\u001b[39m.\u001b[39;49mdfs_visit(\u001b[39m0\u001b[39;49m, DFSTimeCounter(), discovery_times, finish_times, dfs_tree_parents, dfs_back_edges)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/Python/CU-MSDS/Trees%20and%20graphs/Course2ProblemSet2_Solutions.ipynb#X20sZmlsZQ%3D%3D?line=69'>70</a>\u001b[0m     display_Graph(g)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/Python/CU-MSDS/Trees%20and%20graphs/Course2ProblemSet2_Solutions.ipynb#X20sZmlsZQ%3D%3D?line=70'>71</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39mBack edges are\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "\u001b[1;32me:\\Python\\CU-MSDS\\Trees and graphs\\Course2ProblemSet2_Solutions.ipynb Cell 9\u001b[0m in \u001b[0;36mUndirectedGraph.dfs_visit\u001b[1;34m(self, i, dfs_timer, discovery_times, finish_times, dfs_tree_parent, dfs_back_edges)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/Python/CU-MSDS/Trees%20and%20graphs/Course2ProblemSet2_Solutions.ipynb#X20sZmlsZQ%3D%3D?line=65'>66</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdfs_visit\u001b[39m(\u001b[39mself\u001b[39m, i, dfs_timer, discovery_times, finish_times, \n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/Python/CU-MSDS/Trees%20and%20graphs/Course2ProblemSet2_Solutions.ipynb#X20sZmlsZQ%3D%3D?line=66'>67</a>\u001b[0m                     dfs_tree_parent, dfs_back_edges):\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/Python/CU-MSDS/Trees%20and%20graphs/Course2ProblemSet2_Solutions.ipynb#X20sZmlsZQ%3D%3D?line=67'>68</a>\u001b[0m     \u001b[39massert\u001b[39;00m \u001b[39m0\u001b[39m \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m i \u001b[39m<\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/Python/CU-MSDS/Trees%20and%20graphs/Course2ProblemSet2_Solutions.ipynb#X20sZmlsZQ%3D%3D?line=68'>69</a>\u001b[0m     \u001b[39massert\u001b[39;00m discovery_times[i] \u001b[39m==\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/Python/CU-MSDS/Trees%20and%20graphs/Course2ProblemSet2_Solutions.ipynb#X20sZmlsZQ%3D%3D?line=69'>70</a>\u001b[0m     \u001b[39massert\u001b[39;00m finish_times[i] \u001b[39m==\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/Python/CU-MSDS/Trees%20and%20graphs/Course2ProblemSet2_Solutions.ipynb#X20sZmlsZQ%3D%3D?line=70'>71</a>\u001b[0m     discovery_times[i] \u001b[39m=\u001b[39m dfs_timer\u001b[39m.\u001b[39mget()\n",
-      "\u001b[1;31mAssertionError\u001b[0m: "
+      "\n",
+      "0 -->  {1, 2, 4}\n",
+      "1 -->  {0}\n",
+      "2 -->  {0, 3, 4}\n",
+      "3 -->  {2, 4}\n",
+      "4 -->  {0, 2, 3}\n",
+      "\n",
+      "Back edges are\n",
+      "(4, 0)\n",
+      "(4, 2)\n",
+      "\n",
+      "Node\t Discovery\t Finish\t DFS-Tree-Parent\n",
+      "0 \t 0\t\t 9 \t None\n",
+      "1 \t 1\t\t 2 \t 0\n",
+      "2 \t 3\t\t 8 \t 0\n",
+      "3 \t 4\t\t 7 \t 2\n",
+      "4 \t 5\t\t 6 \t 3\n",
+      "\n",
+      "Finish time queue\n",
+      "[0, 2, 3, 4, 1]\n"
      ]
     }
    ],
