--- a/Trees and graphs/Course2ProblemSet3_Solutions.ipynb
+++ b/Trees and graphs/Course2ProblemSet3_Solutions.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 175,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -85,6 +85,25 @@
     "        assert 0 <= j < self.n\n",
     "        assert self.parents[j] != None, 'You are calling find on an element that is not part of the family yet. Please call make_set first.'\n",
     "        # your code here\n",
+    "    \n",
+    "        # check parent node, if the parent is the value of the current node return the repeated node\n",
+    "        if self.parents[j] != j:\n",
+    "            self.parents[j] = self.find(self.parents[j])\n",
+    "            return self.find(self.parents[j])\n",
+    "        \n",
+    "        print(f\"Node: {j}, parent: {self.parents[j]}\")\n",
+    "        if self.is_representative(j):\n",
+    "            print(f\"Root reached. Root: {j}\")\n",
+    "            return self.parents[j]\n",
+    "\n",
+    "    def increase_Rank(self, j):\n",
+    "        self.rank[j] += 1\n",
+    "        if self.is_representative(j):\n",
+    "            print(f\"\\nFound representative node: {self.parents[j]}\\n\")\n",
+    "        else:\n",
+    "            print(f\"Node: {j} on a branch, moving up tree\")\n",
+    "            self.increase_Rank(self.parents[j])\n",
+    "        \n",
     "        \n",
     "    \n",
     "    # Function : union\n",
@@ -100,12 +119,32 @@
     "        assert self.parents[j1] != None\n",
     "        assert self.parents[j2] != None\n",
     "        # your code here\n",
+    "\n",
+    "        # find the representatives\n",
+    "        print(f\"Union: ({j1}, {j2}) | R1: {self.find(j1)}, R2: {self.find(j2)}\")\n",
+    "        if self.find(j1) != self.find(j2):\n",
+    "\n",
+    "            # if one rank is bigger set the lower rank to child, if equal set 1st number to parent.\n",
+    "            if self.rank[j1] >= self.rank[j2]:\n",
+    "                self.parents[j2] = j1\n",
+    "                self.increase_Rank(j1)\n",
+    "            if self.rank[j1] < self.rank[j2]:\n",
+    "                print(\"second number is parent\")\n",
+    "                self.parents[j1] = j2\n",
+    "                self.increase_Rank(j2)\n",
+    "\n",
+    "    def display_Metrics(self) -> None:\n",
+    "        print(f\"\\nNodes: {self.n}, representatives: {self.parents}, rank: {self.rank}\\n\")\n",
+    "\n",
+    "        for node in range(self.n):\n",
+    "            print(f\"Node: {node}, parents: {self.parents[node]} rank: {self.rank[node]}\")\n",
+    "        print(\"\")\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 178,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -121,7 +160,177 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Node: 0, parent: 0\n",
+      "Root reached. Root: 0\n",
+      "Node: 1, parent: 1\n",
+      "Root reached. Root: 1\n",
+      "Node: 2, parent: 2\n",
+      "Root reached. Root: 2\n",
+      "Node: 3, parent: 3\n",
+      "Root reached. Root: 3\n",
+      "Node: 4, parent: 4\n",
+      "Root reached. Root: 4\n",
+      "Node: 5, parent: 5\n",
+      "Root reached. Root: 5\n",
+      "Node: 6, parent: 6\n",
+      "Root reached. Root: 6\n",
+      "Node: 7, parent: 7\n",
+      "Root reached. Root: 7\n",
+      "Node: 8, parent: 8\n",
+      "Root reached. Root: 8\n",
+      "Node: 9, parent: 9\n",
+      "Root reached. Root: 9\n",
+      "Node: 0, parent: 0\n",
+      "Root reached. Root: 0\n",
+      "Node: 1, parent: 1\n",
+      "Root reached. Root: 1\n",
+      "Union: (0, 1) | R1: 0, R2: 1\n",
+      "Node: 0, parent: 0\n",
+      "Root reached. Root: 0\n",
+      "Node: 1, parent: 1\n",
+      "Root reached. Root: 1\n",
+      "\n",
+      "Found representative node: 0\n",
+      "\n",
+      "Node: 2, parent: 2\n",
+      "Root reached. Root: 2\n",
+      "Node: 3, parent: 3\n",
+      "Root reached. Root: 3\n",
+      "Union: (2, 3) | R1: 2, R2: 3\n",
+      "Node: 2, parent: 2\n",
+      "Root reached. Root: 2\n",
+      "Node: 3, parent: 3\n",
+      "Root reached. Root: 3\n",
+      "\n",
+      "Found representative node: 2\n",
+      "\n",
+      "Node: 0, parent: 0\n",
+      "Root reached. Root: 0\n",
+      "Node: 0, parent: 0\n",
+      "Root reached. Root: 0\n",
+      "Node: 0, parent: 0\n",
+      "Root reached. Root: 0\n",
+      "Node: 2, parent: 2\n",
+      "Root reached. Root: 2\n",
+      "Node: 2, parent: 2\n",
+      "Root reached. Root: 2\n",
+      "Node: 2, parent: 2\n",
+      "Root reached. Root: 2\n",
+      "Node: 0, parent: 0\n",
+      "Root reached. Root: 0\n",
+      "Node: 2, parent: 2\n",
+      "Root reached. Root: 2\n",
+      "Node: 2, parent: 2\n",
+      "Root reached. Root: 2\n",
+      "Node: 2, parent: 2\n",
+      "Root reached. Root: 2\n",
+      "Node: 2, parent: 2\n",
+      "Root reached. Root: 2\n",
+      "Node: 4, parent: 4\n",
+      "Root reached. Root: 4\n",
+      "Union: (3, 4) | R1: 2, R2: 4\n",
+      "Node: 2, parent: 2\n",
+      "Root reached. Root: 2\n",
+      "Node: 2, parent: 2\n",
+      "Root reached. Root: 2\n",
+      "Node: 4, parent: 4\n",
+      "Root reached. Root: 4\n",
+      "Node: 3 on a branch, moving up tree\n",
+      "\n",
+      "Found representative node: 2\n",
+      "\n",
+      "Node: 2, parent: 2\n",
+      "Root reached. Root: 2\n",
+      "Node: 2, parent: 2\n",
+      "Root reached. Root: 2\n",
+      "Node: 2, parent: 2\n",
+      "Root reached. Root: 2\n",
+      "Node: 2, parent: 2\n",
+      "Root reached. Root: 2\n",
+      "Node: 5, parent: 5\n",
+      "Root reached. Root: 5\n",
+      "Node: 7, parent: 7\n",
+      "Root reached. Root: 7\n",
+      "Union: (5, 7) | R1: 5, R2: 7\n",
+      "Node: 5, parent: 5\n",
+      "Root reached. Root: 5\n",
+      "Node: 7, parent: 7\n",
+      "Root reached. Root: 7\n",
+      "\n",
+      "Found representative node: 5\n",
+      "\n",
+      "Node: 6, parent: 6\n",
+      "Root reached. Root: 6\n",
+      "Node: 8, parent: 8\n",
+      "Root reached. Root: 8\n",
+      "Union: (6, 8) | R1: 6, R2: 8\n",
+      "Node: 6, parent: 6\n",
+      "Root reached. Root: 6\n",
+      "Node: 8, parent: 8\n",
+      "Root reached. Root: 8\n",
+      "\n",
+      "Found representative node: 6\n",
+      "\n",
+      "Node: 2, parent: 2\n",
+      "Root reached. Root: 2\n",
+      "Node: 2, parent: 2\n",
+      "Root reached. Root: 2\n",
+      "Node: 5, parent: 5\n",
+      "Root reached. Root: 5\n",
+      "Node: 5, parent: 5\n",
+      "Root reached. Root: 5\n",
+      "Union: (3, 7) | R1: 2, R2: 5\n",
+      "Node: 2, parent: 2\n",
+      "Root reached. Root: 2\n",
+      "Node: 2, parent: 2\n",
+      "Root reached. Root: 2\n",
+      "Node: 5, parent: 5\n",
+      "Root reached. Root: 5\n",
+      "Node: 5, parent: 5\n",
+      "Root reached. Root: 5\n",
+      "Node: 3 on a branch, moving up tree\n",
+      "\n",
+      "Found representative node: 2\n",
+      "\n",
+      "Node: 0, parent: 0\n",
+      "Root reached. Root: 0\n",
+      "Node: 6, parent: 6\n",
+      "Root reached. Root: 6\n",
+      "Union: (0, 6) | R1: 0, R2: 6\n",
+      "Node: 0, parent: 0\n",
+      "Root reached. Root: 0\n",
+      "Node: 6, parent: 6\n",
+      "Root reached. Root: 6\n",
+      "\n",
+      "Found representative node: 0\n",
+      "\n",
+      "Node: 0, parent: 0\n",
+      "Root reached. Root: 0\n",
+      "Node: 0, parent: 0\n",
+      "Root reached. Root: 0\n",
+      "Node: 0, parent: 0\n",
+      "Root reached. Root: 0\n",
+      "Node: 0, parent: 0\n",
+      "Root reached. Root: 0\n",
+      "Node: 2, parent: 2\n",
+      "Root reached. Root: 2\n",
+      "Node: 2, parent: 2\n",
+      "Root reached. Root: 2\n",
+      "Node: 2, parent: 2\n",
+      "Root reached. Root: 2\n",
+      "Node: 2, parent: 2\n",
+      "Root reached. Root: 2\n",
+      "Node: 2, parent: 2\n",
+      "Root reached. Root: 2\n",
+      "All tests passed: 10 points.\n"
+     ]
+    }
+   ],
    "source": [
     "d = DisjointForests(10)\n",
     "for i in range(10):\n",
@@ -959,7 +1168,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.13 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -973,7 +1182,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "5078519dd5a7cdd5bf3d58d3d7a1ff5fb589b81ac02491450a5ed840961a5ceb"
+   }
   }
  },
  "nbformat": 4,
