--- a/Trees and graphs/Course2ProblemSet3_Solutions.ipynb
+++ b/Trees and graphs/Course2ProblemSet3_Solutions.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 181,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -91,9 +91,9 @@
     "            self.parents[j] = self.find(self.parents[j])\n",
     "            return self.find(self.parents[j])\n",
     "        \n",
-    "        print(f\"Node: {j}, parent: {self.parents[j]}\")\n",
+    "        #print(f\"Node: {j}, parent: {self.parents[j]}\")\n",
     "        if self.is_representative(j):\n",
-    "            print(f\"Root reached. Root: {j}\")\n",
+    "            #print(f\"Root reached. Root: {j}\")\n",
     "            return self.parents[j]\n",
     "\n",
     "    def increase_Rank(self, j):\n",
@@ -101,7 +101,7 @@
     "        if self.is_representative(j):\n",
     "            print(f\"\\nFound representative node: {self.parents[j]}\\n\")\n",
     "        else:\n",
-    "            print(f\"Node: {j} on a branch, moving up tree\")\n",
+    "            #print(f\"Node: {j} on a branch, moving up tree\")\n",
     "            self.increase_Rank(self.parents[j])\n",
     "        \n",
     "        \n",
@@ -129,7 +129,7 @@
     "                self.parents[j2] = j1\n",
     "                self.increase_Rank(j1)\n",
     "            if self.rank[j1] < self.rank[j2]:\n",
-    "                print(\"second number is parent\")\n",
+    "                #print(\"second number is parent\")\n",
     "                self.parents[j1] = j2\n",
     "                self.increase_Rank(j2)\n",
     "\n",
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 182,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -165,168 +165,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Node: 0, parent: 0\n",
-      "Root reached. Root: 0\n",
-      "Node: 1, parent: 1\n",
-      "Root reached. Root: 1\n",
-      "Node: 2, parent: 2\n",
-      "Root reached. Root: 2\n",
-      "Node: 3, parent: 3\n",
-      "Root reached. Root: 3\n",
-      "Node: 4, parent: 4\n",
-      "Root reached. Root: 4\n",
-      "Node: 5, parent: 5\n",
-      "Root reached. Root: 5\n",
-      "Node: 6, parent: 6\n",
-      "Root reached. Root: 6\n",
-      "Node: 7, parent: 7\n",
-      "Root reached. Root: 7\n",
-      "Node: 8, parent: 8\n",
-      "Root reached. Root: 8\n",
-      "Node: 9, parent: 9\n",
-      "Root reached. Root: 9\n",
-      "Node: 0, parent: 0\n",
-      "Root reached. Root: 0\n",
-      "Node: 1, parent: 1\n",
-      "Root reached. Root: 1\n",
       "Union: (0, 1) | R1: 0, R2: 1\n",
-      "Node: 0, parent: 0\n",
-      "Root reached. Root: 0\n",
-      "Node: 1, parent: 1\n",
-      "Root reached. Root: 1\n",
       "\n",
       "Found representative node: 0\n",
       "\n",
-      "Node: 2, parent: 2\n",
-      "Root reached. Root: 2\n",
-      "Node: 3, parent: 3\n",
-      "Root reached. Root: 3\n",
       "Union: (2, 3) | R1: 2, R2: 3\n",
-      "Node: 2, parent: 2\n",
-      "Root reached. Root: 2\n",
-      "Node: 3, parent: 3\n",
-      "Root reached. Root: 3\n",
       "\n",
       "Found representative node: 2\n",
       "\n",
-      "Node: 0, parent: 0\n",
-      "Root reached. Root: 0\n",
-      "Node: 0, parent: 0\n",
-      "Root reached. Root: 0\n",
-      "Node: 0, parent: 0\n",
-      "Root reached. Root: 0\n",
-      "Node: 2, parent: 2\n",
-      "Root reached. Root: 2\n",
-      "Node: 2, parent: 2\n",
-      "Root reached. Root: 2\n",
-      "Node: 2, parent: 2\n",
-      "Root reached. Root: 2\n",
-      "Node: 0, parent: 0\n",
-      "Root reached. Root: 0\n",
-      "Node: 2, parent: 2\n",
-      "Root reached. Root: 2\n",
-      "Node: 2, parent: 2\n",
-      "Root reached. Root: 2\n",
-      "Node: 2, parent: 2\n",
-      "Root reached. Root: 2\n",
-      "Node: 2, parent: 2\n",
-      "Root reached. Root: 2\n",
-      "Node: 4, parent: 4\n",
-      "Root reached. Root: 4\n",
       "Union: (3, 4) | R1: 2, R2: 4\n",
-      "Node: 2, parent: 2\n",
-      "Root reached. Root: 2\n",
-      "Node: 2, parent: 2\n",
-      "Root reached. Root: 2\n",
-      "Node: 4, parent: 4\n",
-      "Root reached. Root: 4\n",
-      "Node: 3 on a branch, moving up tree\n",
       "\n",
       "Found representative node: 2\n",
       "\n",
-      "Node: 2, parent: 2\n",
-      "Root reached. Root: 2\n",
-      "Node: 2, parent: 2\n",
-      "Root reached. Root: 2\n",
-      "Node: 2, parent: 2\n",
-      "Root reached. Root: 2\n",
-      "Node: 2, parent: 2\n",
-      "Root reached. Root: 2\n",
-      "Node: 5, parent: 5\n",
-      "Root reached. Root: 5\n",
-      "Node: 7, parent: 7\n",
-      "Root reached. Root: 7\n",
       "Union: (5, 7) | R1: 5, R2: 7\n",
-      "Node: 5, parent: 5\n",
-      "Root reached. Root: 5\n",
-      "Node: 7, parent: 7\n",
-      "Root reached. Root: 7\n",
       "\n",
       "Found representative node: 5\n",
       "\n",
-      "Node: 6, parent: 6\n",
-      "Root reached. Root: 6\n",
-      "Node: 8, parent: 8\n",
-      "Root reached. Root: 8\n",
       "Union: (6, 8) | R1: 6, R2: 8\n",
-      "Node: 6, parent: 6\n",
-      "Root reached. Root: 6\n",
-      "Node: 8, parent: 8\n",
-      "Root reached. Root: 8\n",
       "\n",
       "Found representative node: 6\n",
       "\n",
-      "Node: 2, parent: 2\n",
-      "Root reached. Root: 2\n",
-      "Node: 2, parent: 2\n",
-      "Root reached. Root: 2\n",
-      "Node: 5, parent: 5\n",
-      "Root reached. Root: 5\n",
-      "Node: 5, parent: 5\n",
-      "Root reached. Root: 5\n",
       "Union: (3, 7) | R1: 2, R2: 5\n",
-      "Node: 2, parent: 2\n",
-      "Root reached. Root: 2\n",
-      "Node: 2, parent: 2\n",
-      "Root reached. Root: 2\n",
-      "Node: 5, parent: 5\n",
-      "Root reached. Root: 5\n",
-      "Node: 5, parent: 5\n",
-      "Root reached. Root: 5\n",
-      "Node: 3 on a branch, moving up tree\n",
       "\n",
       "Found representative node: 2\n",
       "\n",
-      "Node: 0, parent: 0\n",
-      "Root reached. Root: 0\n",
-      "Node: 6, parent: 6\n",
-      "Root reached. Root: 6\n",
       "Union: (0, 6) | R1: 0, R2: 6\n",
-      "Node: 0, parent: 0\n",
-      "Root reached. Root: 0\n",
-      "Node: 6, parent: 6\n",
-      "Root reached. Root: 6\n",
       "\n",
       "Found representative node: 0\n",
       "\n",
-      "Node: 0, parent: 0\n",
-      "Root reached. Root: 0\n",
-      "Node: 0, parent: 0\n",
-      "Root reached. Root: 0\n",
-      "Node: 0, parent: 0\n",
-      "Root reached. Root: 0\n",
-      "Node: 0, parent: 0\n",
-      "Root reached. Root: 0\n",
-      "Node: 2, parent: 2\n",
-      "Root reached. Root: 2\n",
-      "Node: 2, parent: 2\n",
-      "Root reached. Root: 2\n",
-      "Node: 2, parent: 2\n",
-      "Root reached. Root: 2\n",
-      "Node: 2, parent: 2\n",
-      "Root reached. Root: 2\n",
-      "Node: 2, parent: 2\n",
-      "Root reached. Root: 2\n",
       "All tests passed: 10 points.\n"
      ]
     }
@@ -393,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 183,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -512,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 280,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -534,13 +400,80 @@
     "    d = DisjointForests(g.n)\n",
     "    # your code here\n",
     "    \n",
+    "    # sort the edges\n",
+    "    print(f\"Raw edges: {g.edges}\")\n",
+    "    #remove all edges larger than the weight indicated by W\n",
+    "    for entry in range(len(g.edges), 0, -1):\n",
+    "        #print(g.edges[entry - 1])\n",
+    "        if g.edges[entry - 1][2] > W:\n",
+    "            g.edges.remove(g.edges[entry - 1])\n",
+    "    print(f\"Trimmed Edges: {g.edges}\")\n",
+    "\n",
+    "    # use Kruskal's algorithm ( see noted on Minimum spanning trees page)\n",
+    "\n",
     "    # extract a set of sets from d\n",
-    "    return d.dictionary_of_sets()    "
+    "    return d.dictionary_of_sets()   \n",
+    "\n",
+    "def display_graph(g):\n",
+    "    # nodes, connection to node, weight of connection\n",
+    "    \n",
+    "    for node in range(g.n):\n",
+    "        print(f\"Node a: {g.edges[node][0]}, Node b: {g.edges[node][1]}, Weight: {g.edges[node][2]}\")\n",
+    "        #print(node)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 281,
+   "id": "4425b058",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Node a: 0, Node b: 1, Weight: 0.5\n",
+      "Node a: 0, Node b: 2, Weight: 1.0\n",
+      "Node a: 0, Node b: 4, Weight: 0.5\n",
+      "Node a: 2, Node b: 3, Weight: 1.5\n",
+      "Node a: 2, Node b: 4, Weight: 2.0\n",
+      "Node a: 3, Node b: 4, Weight: 1.5\n",
+      "Node a: 5, Node b: 6, Weight: 2.0\n",
+      "Node a: 5, Node b: 7, Weight: 2.0\n",
+      "Raw edges: [(0, 1, 0.5), (0, 2, 1.0), (0, 4, 0.5), (2, 3, 1.5), (2, 4, 2.0), (3, 4, 1.5), (5, 6, 2.0), (5, 7, 2.0)]\n",
+      "Trimmed Edges: [(0, 1, 0.5), (0, 2, 1.0), (0, 4, 0.5), (2, 3, 1.5), (3, 4, 1.5)]\n",
+      "SCCs with threshold 2.0 computed by your code are:\n"
+     ]
+    }
+   ],
+   "source": [
+    "g3 = UndirectedGraph(8)\n",
+    "g3.add_edge(0,1,0.5)\n",
+    "g3.add_edge(0,2,1.0)\n",
+    "g3.add_edge(0,4,0.5)\n",
+    "g3.add_edge(2,3,1.5)\n",
+    "g3.add_edge(2,4,2.0)\n",
+    "g3.add_edge(3,4,1.5)\n",
+    "g3.add_edge(5,6,2.0)\n",
+    "g3.add_edge(5,7,2.0)\n",
+    "\n",
+    "#print(f\"Raw Edges: {g3.edges}\")\n",
+    "#g3.sort_edges()\n",
+    "#print(f\"Sorted Edges: {g3.edges}\")\n",
+    "\n",
+    "#print(g3.get_vertex_data(2))\n",
+    "\n",
+    "display_graph(g3)\n",
+    "res = compute_scc(g3, 1.5)\n",
+    "print('SCCs with threshold 2.0 computed by your code are:')\n",
+    "# assert len(res) == 2, f'Expected 2 SCCs but got {len(res)}'\n",
+    "for (k, s) in res.items():\n",
+    "    print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 282,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -556,7 +489,28 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Raw edges: [(0, 1, 0.5), (0, 2, 1.0), (0, 4, 0.5), (2, 3, 1.5), (2, 4, 2.0), (3, 4, 1.5), (5, 6, 2.0), (5, 7, 2.0)]\n",
+      "Trimmed Edges: [(0, 1, 0.5), (0, 2, 1.0), (0, 4, 0.5), (2, 3, 1.5), (2, 4, 2.0), (3, 4, 1.5), (5, 6, 2.0), (5, 7, 2.0)]\n",
+      "SCCs with threshold 2.0 computed by your code are:\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "Expected 2 SCCs but got 0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [282], line 12\u001b[0m\n\u001b[0;32m     10\u001b[0m res \u001b[39m=\u001b[39m compute_scc(g3, \u001b[39m2.0\u001b[39m)\n\u001b[0;32m     11\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mSCCs with threshold 2.0 computed by your code are:\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m---> 12\u001b[0m \u001b[39massert\u001b[39;00m \u001b[39mlen\u001b[39m(res) \u001b[39m==\u001b[39m \u001b[39m2\u001b[39m, \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mExpected 2 SCCs but got \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mlen\u001b[39m(res)\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\n\u001b[0;32m     13\u001b[0m \u001b[39mfor\u001b[39;00m (k, s) \u001b[39min\u001b[39;00m res\u001b[39m.\u001b[39mitems():\n\u001b[0;32m     14\u001b[0m     \u001b[39mprint\u001b[39m(s)\n",
+      "\u001b[1;31mAssertionError\u001b[0m: Expected 2 SCCs but got 0"
+     ]
+    }
+   ],
    "source": [
     "g3 = UndirectedGraph(8)\n",
     "g3.add_edge(0,1,0.5)\n",
