--- a/Trees and graphs/Course2ProblemSet3_Solutions.ipynb
+++ b/Trees and graphs/Course2ProblemSet3_Solutions.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 5,
    "id": "4425b058",
    "metadata": {},
    "outputs": [
@@ -1122,7 +1122,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 64-bit (microsoft store)",
+   "display_name": "Python 3.10.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1136,11 +1136,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.0"
   },
   "vscode": {
    "interpreter": {
-    "hash": "5078519dd5a7cdd5bf3d58d3d7a1ff5fb589b81ac02491450a5ed840961a5ceb"
+    "hash": "fb4569285eef3a3450cb62085a5b1e0da4bce0af555edc33dcf29baf3acc1368"
    }
   }
  },
