Could not solve the final problem

--- a/Trees and graphs/TakeHomeFinalC2V1.ipynb
+++ b/Trees and graphs/TakeHomeFinalC2V1.ipynb
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -608,6 +608,17 @@
     "            return True\n",
     "    return False\n",
     "\n",
+    "class UndirectedGraph:\n",
+    "\n",
+    "    def __init__(self, n) -> None:\n",
+    "        self.n = n\n",
+    "        self.edges = []\n",
+    "\n",
+    "\n",
+    "    def add_edge(self, start, end):\n",
+    "        self.edges.append((start, end))\n",
+    "        #print(f\"Adding edge: ({start}, {end})\")\n",
+    "\n",
     "def findPath(width, height, forbidden_circles_list):\n",
     "    # width is a positive number\n",
     "    # height is a positive number\n",
@@ -616,7 +627,109 @@
     "    assert height >= 1\n",
     "    assert all(x <= width and x >=0 and y <= height and y >= 0 and r > 0 for (x,y,r) in forbidden_circles_list)\n",
     "    # your code here\n",
-    "    "
+    "\n",
+    "    # Initialize all the values\n",
+    "    valid_points = []\n",
+    "    source = (0, 0)\n",
+    "    dest = (width, height)\n",
+    "    vertices = (width + 1) * (height + 1)\n",
+    "    graph = UndirectedGraph(vertices)\n",
+    "\n",
+    "    print(f\"Graph: {width + 1} x {height + 1}, vertices: {vertices}, start: {source}, dest: {dest}\")\n",
+    "    \n",
+    "    print(f\"Circles: {circles}\")\n",
+    "\n",
+    "    # Create list of all points that are not in or touching a circle\n",
+    "    for y in range (0, height + 1):\n",
+    "        for x in range (0, width + 1):\n",
+    "            #print(f\"(X,Y): ({x}, {y})\")\n",
+    "            #print(ptInCircle(x, y, circles))\n",
+    "            if ptInCircle(x, y, circles) == False:\n",
+    "                valid_points.append((x, y))\n",
+    "\n",
+    "    \n",
+    "    print(f\"{len(valid_points)} valid points: {valid_points}\")\n",
+    "    for point in valid_points:\n",
+    "        #print(f\"Testing point: {point[0], point[1]}\")\n",
+    "\n",
+    "        # look for points in a cardinal direction to add an edge.\n",
+    "        # north\n",
+    "        if (point[0] + 1, point[1]) in valid_points and (point[0] + 1, point[1]) not in graph.edges:\n",
+    "            #print(f\"Add edge for {point[0] + 1}, {point[1]}\")\n",
+    "            graph.add_edge((point[0], point[1]), (point[0] + 1, point[1]))\n",
+    "        # south\n",
+    "        #if (point[0] - 1, point[1]) in valid_points and (point[0] - 1, point[1]) not in graph.edges:    \n",
+    "            #print(f\"Add edge for {point[0] - 1}, {point[1]}\")\n",
+    "            #graph.add_edge((point[0], point[1]), (point[0] - 1, point[1]))\n",
+    "        # east\n",
+    "        if (point[0], point[1] + 1) in valid_points and (point[0], point[1] + 1) not in graph.edges:\n",
+    "            #print(f\"Add edge for {point[0]}, {point[1] + 1}\")\n",
+    "            graph.add_edge((point[0], point[1]), (point[0], point[1] + 1))\n",
+    "        # west\n",
+    "        #if (point[0], point[1] - 1) in valid_points and (point[0], point[1] - 1) not in graph.edges:\n",
+    "            #print(f\"Add edge for {point[0]}, {point[1] - 1}\")\n",
+    "            #graph.add_edge((point[0], point[1]), (point[0], point[1] - 1))\n",
+    "\n",
+    "    print(\"\\nEdges\\n\")\n",
+    "    for edge in graph.edges:\n",
+    "        print(f\"{edge[0]}, {edge[1]}\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    # Create minimal spanning tree?\n",
+    "\n",
+    "\n",
+    "\n",
+    "    #print(graph.edges)\n",
+    "\n",
+    "\n",
+    "    # dijkstra's algorithm?\n",
+    "\n",
+    "    # set nodes that are inside the circle as having a weight of 1\n",
+    "    # set \"free\" nodes as having a weight of 0\n",
+    "\n",
+    "    # check the length of the shortest path before returning\n",
+    "    # if the length is larger than 0 return an empty set (circle location used.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "441d5a01",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-- Test 1 -- \n",
+      "Graph: 4 x 4, vertices: 16, start: (0, 0), dest: (3, 3)\n",
+      "Circles: [(2, 2, 0.5), (1, 2, 1)]\n",
+      "11 valid points: [(0, 0), (1, 0), (2, 0), (3, 0), (0, 1), (2, 1), (3, 1), (3, 2), (0, 3), (2, 3), (3, 3)]\n",
+      "\n",
+      "Edges\n",
+      "\n",
+      "(0, 0), (1, 0)\n",
+      "(0, 0), (0, 1)\n",
+      "(1, 0), (2, 0)\n",
+      "(2, 0), (3, 0)\n",
+      "(2, 0), (2, 1)\n",
+      "(3, 0), (3, 1)\n",
+      "(2, 1), (3, 1)\n",
+      "(3, 1), (3, 2)\n",
+      "(3, 2), (3, 3)\n",
+      "(2, 3), (3, 3)\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('-- Test 1 -- ')\n",
+    "\n",
+    "circles = [(2,2,0.5), (1,2,1)]\n",
+    "p = findPath(3, 3, circles)\n",
+    "print(p)"
    ]
   },
   {
