--- a/Dynamic Programming & Greedy Algorithms/Assignment1.ipynb
+++ b/Dynamic Programming & Greedy Algorithms/Assignment1.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -55,12 +55,21 @@
     "    if n == 1:\n",
     "        return 0\n",
     "    # your code here\n",
+    "    minSoFar = float('inf')\n",
+    "    maxSubArray = None\n",
+    "    for i in range(0, n -1):\n",
+    "        if a[i] < minSoFar:\n",
+    "            minSoFar = a[i]\n",
+    "        currentSubArray = a[i] - minSoFar\n",
+    "        if (maxSubArray == None) or (currentSubArray > maxSubArray):\n",
+    "            maxSubArray = currentSubArray\n",
+    "    return maxSubArray\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -76,7 +85,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All tests passed (10 points!)\n"
+     ]
+    }
+   ],
    "source": [
     "from random import randint\n",
     "\n",
@@ -644,7 +661,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "advent-of-code",
    "language": "python",
    "name": "python3"
   },
@@ -658,7 +675,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.0"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "8a771111e330782c9aa1bc2cf0b1e248c1cd31831dcd06ae9177755c6035fa8c"
+   }
   }
  },
  "nbformat": 4,
