--- a/Dynamic Programming & Greedy Algorithms/Assignment1.ipynb
+++ b/Dynamic Programming & Greedy Algorithms/Assignment1.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -168,7 +168,27 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FFT of [1, -1, 1, -1, 1, -1, 1, -1, 1, -1, 1, -1, 1, -1] is\n",
+      " \t [ 0.00000000e+00+0.j -2.22044605e-16+0.j  0.00000000e+00+0.j\n",
+      " -3.33066907e-16+0.j  0.00000000e+00+0.j  2.22044605e-16+0.j\n",
+      "  0.00000000e+00+0.j  1.40000000e+01+0.j  0.00000000e+00+0.j\n",
+      "  0.00000000e+00+0.j  0.00000000e+00+0.j  2.22044605e-16+0.j\n",
+      "  0.00000000e+00+0.j  9.99200722e-16+0.j]\n",
+      "After ifft: [ 1.+0.00000000e+00j -1.-6.41050524e-17j  1.-1.00867099e-16j\n",
+      " -1.-4.71629255e-17j  1.-4.71629255e-17j -1.-1.00867099e-16j\n",
+      "  1.-6.41050524e-17j -1.-7.04340094e-33j  1.+6.41050524e-17j\n",
+      " -1.+1.00867099e-16j  1.+4.71629255e-17j -1.+4.71629255e-17j\n",
+      "  1.+1.00867099e-16j -1.+6.41050524e-17j]\n",
+      "Note that we can suppress the vanishingly small complex cofficients\n",
+      "After converting back to float: [1.0, -1.0, 1.0, -1.0, 1.0, -1.0, 1.0, -1.0, 1.0, -1.0, 1.0, -1.0, 1.0, -1.0]\n"
+     ]
+    }
+   ],
    "source": [
     "from numpy.fft import fft, ifft\n",
     "from numpy import real, imag\n",
@@ -215,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -241,12 +261,37 @@
     "    # Please convert list from complex to reals by using the \n",
     "    # real function in numpy.\n",
     "    # your code here\n",
-    "    "
+    "    \n",
+    "    # Pad the coefficients\n",
+    "    m = len(a_coeff_list) + 1\n",
+    "    n = len(b_coeff_list) + 1\n",
+    "    adjusted_length = m + n - 2\n",
+    "\n",
+    "    for i in range(m, adjusted_length):\n",
+    "        a_coeff_list.append(0)\n",
+    "    for i in range(n, adjusted_length):\n",
+    "        b_coeff_list.append(0)\n",
+    "\n",
+    "    # Calculate FFT of list a & b\n",
+    "    a_fft = fft(a_coeff_list)\n",
+    "    b_fft = fft(b_coeff_list)\n",
+    "\n",
+    "    # Multiple index a[i] x b[i]\n",
+    "    multiplied_fft = []\n",
+    "    for j in range(0, adjusted_length - 1):\n",
+    "        multiplied_fft.append(a_fft[j] * b_fft[j])\n",
+    "\n",
+    "    # Calculate ifft\n",
+    "    c_ifft = ifft(multiplied_fft)\n",
+    "\n",
+    "    # Adjust the ifft output and convert to real numbers\n",
+    "    c_formatted = [real(x) for x in c_ifft]\n",
+    "    return c_formatted\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -262,7 +307,33 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------\n",
+      "Test # 1\n",
+      "c=[2.0, 1.0, 7.401486830834377e-17, -1.0, 1.0, -0.9999999999999998]\n",
+      "Your code found: [2.0, 1.0, 7.401486830834377e-17, -1.0, 1.0, -0.9999999999999998]\n",
+      "Expected: [2, 1, 0, -1, 1, -1]\n",
+      "Passed!\n",
+      "-------\n",
+      "Test # 2\n",
+      "c=[2.9605947323337506e-16, 0.0, -0.9999999999999997, 1.0, 7.401486830834377e-17, -2.999999999999999, 1.9999999999999993, -1.9999999999999996, 0.9999999999999997, 4.999999999999999, 2.9605947323337506e-16, 3.0]\n",
+      "Your code found: [2.9605947323337506e-16, 0.0, -0.9999999999999997, 1.0, 7.401486830834377e-17, -2.999999999999999, 1.9999999999999993, -1.9999999999999996, 0.9999999999999997, 4.999999999999999, 2.9605947323337506e-16, 3.0]\n",
+      "Expected: [0, 0, -1, 1, 0, -3, 2, -2, 1, 5, 0, 3]\n",
+      "Passed!\n",
+      "-------\n",
+      "Test # 3\n",
+      "c=[2.000000000000001, -1.4210854715202005e-15, 4.440892098500626e-16, -3.9999999999999996, -1.0000000000000009, 1.4210854715202005e-15, -0.9999999999999999, 4.000000000000001, 1.0000000000000004, 1.9999999999999987, 1.6320278461989802e-15, -25.0, -7.105427357601002e-16, -0.9999999999999984, -1.1213252548714083e-15, 12.0, -7.105427357601002e-16, 11.0, 1.7763568394002506e-16, -11.000000000000004]\n",
+      "Your code found: [2.000000000000001, -1.4210854715202005e-15, 4.440892098500626e-16, -3.9999999999999996, -1.0000000000000009, 1.4210854715202005e-15, -0.9999999999999999, 4.000000000000001, 1.0000000000000004, 1.9999999999999987, 1.6320278461989802e-15, -25.0, -7.105427357601002e-16, -0.9999999999999984, -1.1213252548714083e-15, 12.0, -7.105427357601002e-16, 11.0, 1.7763568394002506e-16, -11.000000000000004]\n",
+      "Expected: [2, 0, 0, -4, -1, 0, -1, 4, 1, 2, 0, -25, 0, -1, 0, 12, 0, 11, 0, -11]\n",
+      "Passed!\n",
+      "All tests passed (10 points!)\n"
+     ]
+    }
+   ],
    "source": [
     "def check_poly(lst1, lst2):\n",
     "    print(f'Your code found: {lst1}')\n",
@@ -661,7 +732,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "advent-of-code",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -675,11 +746,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
-    "hash": "8a771111e330782c9aa1bc2cf0b1e248c1cd31831dcd06ae9177755c6035fa8c"
+    "hash": "5078519dd5a7cdd5bf3d58d3d7a1ff5fb589b81ac02491450a5ed840961a5ceb"
    }
   }
  },
