--- a/Trees and graphs/TakeHomeFinalC2V1.ipynb
+++ b/Trees and graphs/TakeHomeFinalC2V1.ipynb
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -607,6 +607,33 @@
     "        if d <= rc:\n",
     "            return True\n",
     "    return False\n",
+    "\"\"\"\n",
+    "def BFS(graph, source, dest):\n",
+    "\n",
+    "    queue = [source]\n",
+    "    visited = []\n",
+    "\n",
+    "    print(graph.edges)\n",
+    "\n",
+    "    while queue:\n",
+    "        node = queue.pop(0)\n",
+    "        print(f\"Node: {node}\")\n",
+    "        if node not in visited:\n",
+    "            print(f\"neighbors?: {graph.edges[node]}\")\n",
+    "            neighbors = graph.edges\n",
+    "\n",
+    "            for neighbor in neighbors:\n",
+    "                new_path = list()\n",
+    "                new_path.append(neighbor)\n",
+    "                queue.append(new_path)\n",
+    "\n",
+    "                if neighbor == dest:\n",
+    "                    print(new_path)\n",
+    "                    return\n",
+    "            visited.append(node)\n",
+    "    print(\"Valid path does not exist.\")\n",
+    "    return\n",
+    "\"\"\"  \n",
     "\n",
     "class UndirectedGraph:\n",
     "\n",
@@ -618,6 +645,7 @@
     "    def add_edge(self, start, end):\n",
     "        self.edges.append((start, end))\n",
     "        #print(f\"Adding edge: ({start}, {end})\")\n",
+    "\n",
     "\n",
     "def findPath(width, height, forbidden_circles_list):\n",
     "    # width is a positive number\n",
@@ -675,27 +703,41 @@
     "        print(f\"{edge[0]}, {edge[1]}\")\n",
     "\n",
     "\n",
+    "    graph_dict = {}\n",
+    "    for node in range(len(graph.edges)):\n",
+    "        graph_dict[graph.edges[node][0]] = graph.edges[node][1]\n",
+    "\n",
+    "    print(graph_dict)\n",
     "\n",
     "\n",
-    "    # Create minimal spanning tree?\n",
+    "    nodes = graph_dict.keys()\n",
+    "\n",
+    "    for entry in nodes:\n",
+    "        print(graph_dict[entry])\n",
     "\n",
     "\n",
     "\n",
-    "    #print(graph.edges)\n",
+    "    queue = [graph_dict[(0, 0)]]\n",
+    "    visited = []\n",
+    "    bfs_traversal = []\n",
+    "    \n",
+    "    while queue:\n",
+    "        vertex = queue.pop(0)\n",
+    "        bfs_traversal.append(vertex)\n",
+    "        \n",
+    "        for neighbor in graph_dict[vertex]:\n",
+    "            if neighbor not in visited:\n",
+    "                visited.append(neighbor)\n",
+    "                queue.append(neighbor)\n",
     "\n",
+    "    print(bfs_traversal)\n",
     "\n",
-    "    # dijkstra's algorithm?\n",
-    "\n",
-    "    # set nodes that are inside the circle as having a weight of 1\n",
-    "    # set \"free\" nodes as having a weight of 0\n",
-    "\n",
-    "    # check the length of the shortest path before returning\n",
-    "    # if the length is larger than 0 return an empty set (circle location used.)"
+    "    # dijkstra's algorithm?\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 9,
    "id": "441d5a01",
    "metadata": {},
    "outputs": [
@@ -720,7 +762,35 @@
       "(3, 1), (3, 2)\n",
       "(3, 2), (3, 3)\n",
       "(2, 3), (3, 3)\n",
-      "None\n"
+      "{(0, 0): (0, 1), (1, 0): (2, 0), (2, 0): (2, 1), (3, 0): (3, 1), (2, 1): (3, 1), (3, 1): (3, 2), (3, 2): (3, 3), (2, 3): (3, 3)}\n",
+      "(0, 1) \n",
+      "\n",
+      "(2, 0) \n",
+      "\n",
+      "(2, 1) \n",
+      "\n",
+      "(3, 1) \n",
+      "\n",
+      "(3, 1) \n",
+      "\n",
+      "(3, 2) \n",
+      "\n",
+      "(3, 3) \n",
+      "\n",
+      "(3, 3) \n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "(0, 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [9], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39m-- Test 1 -- \u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      3\u001b[0m circles \u001b[39m=\u001b[39m [(\u001b[39m2\u001b[39m,\u001b[39m2\u001b[39m,\u001b[39m0.5\u001b[39m), (\u001b[39m1\u001b[39m,\u001b[39m2\u001b[39m,\u001b[39m1\u001b[39m)]\n\u001b[1;32m----> 4\u001b[0m p \u001b[39m=\u001b[39m findPath(\u001b[39m3\u001b[39;49m, \u001b[39m3\u001b[39;49m, circles)\n\u001b[0;32m      5\u001b[0m \u001b[39mprint\u001b[39m(p)\n",
+      "Cell \u001b[1;32mIn [8], line 128\u001b[0m, in \u001b[0;36mfindPath\u001b[1;34m(width, height, forbidden_circles_list)\u001b[0m\n\u001b[0;32m    125\u001b[0m vertex \u001b[39m=\u001b[39m queue\u001b[39m.\u001b[39mpop(\u001b[39m0\u001b[39m)\n\u001b[0;32m    126\u001b[0m bfs_traversal\u001b[39m.\u001b[39mappend(vertex)\n\u001b[1;32m--> 128\u001b[0m \u001b[39mfor\u001b[39;00m neighbor \u001b[39min\u001b[39;00m graph_dict[vertex]:\n\u001b[0;32m    129\u001b[0m     \u001b[39mif\u001b[39;00m neighbor \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m visited:\n\u001b[0;32m    130\u001b[0m         visited\u001b[39m.\u001b[39mappend(neighbor)\n",
+      "\u001b[1;31mKeyError\u001b[0m: (0, 1)"
      ]
     }
    ],
@@ -734,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 249,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -750,7 +820,24 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "def checkPath(width, height, circles, path):\n",
     "    assert path[0] == (0,0), 'Path must begin at (0,0)'\n",
@@ -835,7 +922,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (tags/v3.9.13:6de2ca5, May 17 2022, 16:36:42) [MSC v.1929 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
