Cleaned up selection code for problem 2

--- a/Dynamic Programming & Greedy Algorithms/Assignment1.ipynb
+++ b/Dynamic Programming & Greedy Algorithms/Assignment1.ipynb
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 78,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -267,6 +267,7 @@
     "    n = len(b_coeff_list) + 1\n",
     "    adjusted_length = m + n - 2\n",
     "\n",
+    "    # This seems like the wong way to pad the coefficient's\n",
     "    for i in range(m, adjusted_length):\n",
     "        a_coeff_list.append(0)\n",
     "    for i in range(n, adjusted_length):\n",
@@ -277,21 +278,19 @@
     "    b_fft = fft(b_coeff_list)\n",
     "\n",
     "    # Multiple index a[i] x b[i]\n",
-    "    multiplied_fft = []\n",
-    "    for j in range(0, adjusted_length - 1):\n",
-    "        multiplied_fft.append(a_fft[j] * b_fft[j])\n",
+    "    multiplied_fft = a_fft * b_fft\n",
     "\n",
-    "    # Calculate ifft\n",
+    "    # Calculate IFFT\n",
     "    c_ifft = ifft(multiplied_fft)\n",
     "\n",
-    "    # Adjust the ifft output and convert to real numbers\n",
+    "    # Convert to real numbers\n",
     "    c_formatted = [real(x) for x in c_ifft]\n",
     "    return c_formatted\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 79,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -402,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -430,6 +429,7 @@
     "    # convert sets a, b into polynomials as provided in the hint\n",
     "    # a_coeffs and b_coeffs should contain the result\n",
     "    # your code here\n",
+    "    print(f\"a: {a}\")\n",
     "    \n",
     "    # multiply them together\n",
     "    print (\"a_coeffs . \", a_coeffs)\n",
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -469,7 +469,38 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-- Test 1 --\n",
+      "a: {11, 1, 2, 10}\n",
+      "a_coeffs .  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "b_coeffs .  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "Co-efficients of the testcase are\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "Passed\n",
+      "-- Test 2 --\n",
+      "a: {11, 1, 2, 10}\n",
+      "a_coeffs .  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "b_coeffs .  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "Co-efficients of the testcase are\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "Failed Test 2: your code returns false but note that 1 in a + 10 in b = 11 in c ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [77], line 11\u001b[0m\n\u001b[0;32m      9\u001b[0m b \u001b[39m=\u001b[39m \u001b[39mset\u001b[39m([\u001b[39m2\u001b[39m, \u001b[39m5\u001b[39m, \u001b[39m8\u001b[39m, \u001b[39m10\u001b[39m])\n\u001b[0;32m     10\u001b[0m c \u001b[39m=\u001b[39m \u001b[39mset\u001b[39m([\u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m5\u001b[39m,  \u001b[39m8\u001b[39m, \u001b[39m11\u001b[39m])\n\u001b[1;32m---> 11\u001b[0m \u001b[39massert\u001b[39;00m check_sum_exists(a, b, c, \u001b[39m12\u001b[39m), \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mFailed Test 2: your code returns false but note that 1 in a + 10 in b = 11 in c \u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m     12\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mPassed\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     14\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39m-- Test 3 --\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;31mAssertionError\u001b[0m: Failed Test 2: your code returns false but note that 1 in a + 10 in b = 11 in c "
+     ]
+    }
+   ],
    "source": [
     "print('-- Test 1 --')\n",
     "a = set([1, 2, 10, 11])\n",
