--- a/Dynamic Programming & Greedy Algorithms/Assignment2.ipynb
+++ b/Dynamic Programming & Greedy Algorithms/Assignment2.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -120,13 +120,25 @@
     "    aj = a[j] if 0 <= j < len(a) else None \n",
     "    # Implement the recurrence below. Use recursive calls back to lssLength\n",
     "    # your code here\n",
-    "    \n",
-    "    "
+    "\n",
+    "\n",
+    "    # Base case #1 - i = n\n",
+    "    if i >= len(a):\n",
+    "        return 0\n",
+    "    # Base case #2 - i < n and aj != None and abs(a[i] - aj > 1)\n",
+    "    elif (aj != None):\n",
+    "        if (abs(a[i] - aj) > 1):\n",
+    "            return lssLength(a, i + 1, j)\n",
+    "        else:\n",
+    "            return max(1 + lssLength(a, i +1, i), lssLength(a, i+1, j))\n",
+    "    # i < n and aj == None or abs(a[i] - aj <= 1)\n",
+    "    else:\n",
+    "        return max(1 + lssLength(a, i +1, i), lssLength(a, i+1, j))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -142,7 +154,24 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--Test1--\n",
+      "4\n",
+      "passed\n",
+      "--Test2--\n",
+      "8\n",
+      "--Test3--\n",
+      "1\n",
+      "--Test 4--\n",
+      "14\n",
+      "All Tests Passed (8 points)\n"
+     ]
+    }
+   ],
    "source": [
     "print('--Test1--')\n",
     "n1 = lssLength([1, 4, 2, -2, 0, -1, 2, 3],0, -1)\n",
@@ -846,7 +875,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "advent-of-code",
    "language": "python",
    "name": "python3"
   },
@@ -860,7 +889,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.0"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "8a771111e330782c9aa1bc2cf0b1e248c1cd31831dcd06ae9177755c6035fa8c"
+   }
   }
  },
  "nbformat": 4,
