--- a/Dynamic Programming & Greedy Algorithms/Assignment2.ipynb
+++ b/Dynamic Programming & Greedy Algorithms/Assignment2.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -399,12 +399,24 @@
     "def computeLSS(a):\n",
     "    # your code here\n",
     "    memo_table = memoizeLSS(a)\n",
-    "    print(memo_table)"
+    "    #print(memo_table)\n",
+    "\n",
+    "    i = 0\n",
+    "    j = -1\n",
+    "    string = []\n",
+    "\n",
+    "    # check value given by the memo_table, start in top left corner and work to the right.\n",
+    "    while i < len(a):\n",
+    "        if memo_table[(i, j)] > memo_table[(i +1, j)]:\n",
+    "            string.append(a[i])\n",
+    "            j = i\n",
+    "        i = i + 1\n",
+    "    return string"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -427,19 +439,17 @@
      "text": [
       "--Test 1 --\n",
       "[1, 4, 2, -2, 0, -1, 2, 3]\n",
-      "{(8, -1): 0, (8, 0): 0, (8, 1): 0, (8, 2): 0, (8, 3): 0, (8, 4): 0, (8, 5): 0, (8, 6): 0, (8, 7): 0, (7, 6): 1, (7, 5): 0, (7, 4): 0, (7, 3): 0, (7, 2): 1, (7, 1): 1, (7, 0): 0, (7, -1): 1, (6, 5): 0, (6, 4): 0, (6, 3): 0, (6, 2): 2, (6, 1): 1, (6, 0): 2, (6, -1): 2, (5, 4): 1, (5, 3): 1, (5, 2): 2, (5, 1): 1, (5, 0): 2, (5, -1): 2, (4, 3): 1, (4, 2): 2, (4, 1): 1, (4, 0): 2, (4, -1): 2, (3, 2): 2, (3, 1): 1, (3, 0): 2, (3, -1): 2, (2, 1): 1, (2, 0): 3, (2, -1): 3, (1, 0): 3, (1, -1): 3, (0, -1): 4}\n",
-      "sub1 = None\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "object of type 'NoneType' has no len()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[36], line 22\u001b[0m\n\u001b[0;32m     20\u001b[0m sub1 \u001b[39m=\u001b[39m computeLSS(a1)\n\u001b[0;32m     21\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39msub1 = \u001b[39m\u001b[39m{\u001b[39;00msub1\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n\u001b[1;32m---> 22\u001b[0m \u001b[39massert\u001b[39;00m \u001b[39mlen\u001b[39;49m(sub1) \u001b[39m==\u001b[39m \u001b[39m4\u001b[39m, \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mSubsequence does not have length 4\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m     23\u001b[0m \u001b[39massert\u001b[39;00m checkSubsequence(a1, sub1), \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mYour solution is not a subsequence of the original sequence\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m     25\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39m--Test2--\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: object of type 'NoneType' has no len()"
+      "sub1 = [1, 2, 2, 3]\n",
+      "--Test2--\n",
+      "[1, 2, 3, 4, 0, 1, -1, -2, -3, -4, 5, -5, -6]\n",
+      "sub2 = [1, 0, -1, -2, -3, -4, -5, -6]\n",
+      "--Test3--\n",
+      "[0, 2, 4, 6, 8, 10, 12]\n",
+      "sub3 = [12]\n",
+      "--Test4--\n",
+      "[4, 8, 7, 5, 3, 2, 5, 6, 7, 1, 3, -1, 0, -2, -3, 0, 1, 2, 1, 3, 1, 0, -1, 2, 4, 5, 0, 2, -3, -9, -4, -2, -3, -1]\n",
+      "sub4 = [4, 3, 2, 1, 0, 0, 1, 2, 1, 1, 0, -1, -2, -1]\n",
+      "All test passed (10 points)\n"
      ]
     }
    ],
@@ -929,7 +939,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "advent-of-code",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -943,11 +953,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
-    "hash": "8a771111e330782c9aa1bc2cf0b1e248c1cd31831dcd06ae9177755c6035fa8c"
+    "hash": "5078519dd5a7cdd5bf3d58d3d7a1ff5fb589b81ac02491450a5ed840961a5ceb"
    }
   }
  },
